--- a/_posts/Projects/2024-03-04-website.md
+++ b/_posts/Projects/2024-03-04-website.md
@@ -7,7 +7,7 @@ toc: false
 math: true
 comments: false
 mermaid: true
-image: https://media.discordapp.net/attachments/876229818205745193/1204185491210108998/nasir-al-mulk-mosque-shiraz-iran-3.jpg?ex=65ef7fa1&is=65dd0aa1&hm=666b419c0ade2961e220f84ff2f2c581df484a5e6f40eac4e1d229198fb3d191&=&
+image: https://i.ibb.co/TmhWZsY/nasir-al-mulk-mosque-shiraz-iran-3.jpg
 
 <author_id>:
     name: Iapetus J. D.
