--- a/_posts/Projects/2024-03-04-website.md
+++ b/_posts/Projects/2024-03-04-website.md
@@ -10,7 +10,7 @@ mermaid: true
 image: https://i.ibb.co/TmhWZsY/nasir-al-mulk-mosque-shiraz-iran-3.jpg
 
 <author_id>:
-    name: Iapetus J. D.
+    name: exploot
 ---
 
 Hello! This is my portfolio. Creating this website has been an exciting journey filled with learning and creativity. I embarked on this adventure with a vision to showcase my skills and projects in a visually appealing and accessible manner. To bring this vision to life, I decided to leverage the power of Github Pages and Jekyll, along with the familiarity of GIT and the convenience of Microsoft Visual Studio.
