--- a/_posts/Projects/2023-05-09-ROT13.md
+++ b/_posts/Projects/2023-05-09-ROT13.md
@@ -1,7 +1,7 @@
 ---
 title: ROT13 encoder
 date: 2023-05-09
-categories: [Projects, Python]
+categories: [Projects]
 tags: [Python, Cryptography]
 toc: false
 math: true
