--- a/_posts/Projects/2024-03-04-website.md
+++ b/_posts/Projects/2024-03-04-website.md
@@ -1,12 +1,13 @@
 ---
 title: Creating this website...
 date: 2024-03-04
-categories: [Projects]
-tags: [Projects]
+categories: [Projects, Blog]
+tags: [Intro]
 toc: false
 math: true
-comments: false
+comments: true
 mermaid: true
+pin: true
 image: https://i.ibb.co/TmhWZsY/nasir-al-mulk-mosque-shiraz-iran-3.jpg
 
 <author_id>:
