Theme Update and General Fixes

--- a/_posts/Projects/2024-03-04-website.md
+++ b/_posts/Projects/2024-03-04-website.md
@@ -1,4 +1,5 @@
 ---
+authors: 
 title: Creating this website...
 date: 2024-03-04
 categories: [Projects, Blog]
@@ -9,8 +10,7 @@ pin: true
 mermaid: true
 image: https://i.ibb.co/TmhWZsY/nasir-al-mulk-mosque-shiraz-iran-3.jpg
 
-<author_id>:
-    name: exploot
+
 ---
 
 Hello! This is my website. Creating it has been an exciting journey filled with learning and creativity. I embarked on this adventure with a vision to showcase my skills and projects in a visually appealing and accessible manner. To bring this vision to life, I decided to leverage the power of Github Pages and Jekyll, along with the familiarity of GIT and the convenience of Microsoft Visual Studio.
