--- a/_posts/Projects/2023-05-09-ROT13.md
+++ b/_posts/Projects/2023-05-09-ROT13.md
@@ -1,4 +1,5 @@
 ---
+author: 
 title: ROT13 encoder
 date: 2023-05-09
 categories: [Projects]
@@ -7,8 +8,7 @@ toc: false
 math: true
 mermaid: true
 
-<author_id>:
-    name: exploot
+
 ---
 # Encode ANY message you want! - 
 
