--- a/_posts/Projects/2023-05-09-ROT13.md
+++ b/_posts/Projects/2023-05-09-ROT13.md
@@ -4,7 +4,7 @@ title: ROT13 encoder
 date: 2023-05-09
 categories: [Projects]
 tags: [Python, Cryptography]
-toc: false
+toc: true
 math: true
 mermaid: true
 
