--- a/_posts/Projects/2024-03-04-website.md
+++ b/_posts/Projects/2024-03-04-website.md
@@ -4,7 +4,7 @@ title: Creating this website...
 date: 2024-03-04
 categories: [Projects, Blog]
 tags: [Intro]
-toc: false
+toc: true
 math: true
 pin: true
 mermaid: true
